--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
 {
     "id": "animes-season-addon",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "name": "Animes' season",
     "description": "A catalog addon for the latest anime seasons",
     "logo": "https://styles.redditmedia.com/t5_yo4xr/styles/communityIcon_rv2fpnvbmfra1.png",
@@ -11,7 +11,7 @@
         {
           "type": "series",
           "id": "archive_anime_seasons",
-          "name": "Previous Years' Anime Seasons (TV)",
+          "name": "Anime Years",
           "extra": [
               { "name": "genre", "options": [
                 "2001","2002","2003","2004","2005","2006","2007","2008","2009","2010","2011","2012","2013","2014","2015","2016","2017","2018","2019","2020","2021","2022"
@@ -22,7 +22,7 @@
         {
           "type": "movie",
           "id": "archive_anime_seasons",
-          "name": "Previous Years' Anime Seasons (Movies)",
+          "name": "Anime Years",
           "extra": [
               { "name": "genre", "options": [
                 "2001","2002","2003","2004","2005","2006","2007","2008","2009","2010","2011","2012","2013","2014","2015","2016","2017","2018","2019","2020","2021","2022"
@@ -33,18 +33,18 @@
       {
         "type": "series",
         "id": "latest_anime_seasons",
-        "name": "Current Year's Anime Seasons (TV)",
+        "name": "Anime Seasons",
         "extra": [
-            { "name": "genre", "options": ["Summer", "Fall", "Winter", "Spring"], "isRequired": true }
+            { "name": "genre", "options": ["spring","summer", "fall", "winter"], "isRequired": true }
         ],
         "extraSupported": ["genre"]
       },
       {
         "type": "movie",
         "id": "latest_anime_seasons",
-        "name": "Current Year's Anime Seasons (Movies)",
+        "name": "Anime Seasons",
         "extra": [
-            { "name": "genre", "options": ["Summer", "Fall", "Winter", "Spring"], "isRequired": true }
+            { "name": "genre", "options": ["spring","summer", "fall", "winter"], "isRequired": true }
         ],
         "extraSupported": ["genre"]
       }
