Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -1,14 +1,14 @@
 {
   "metas": [
     {
-      "id": "tt31031809",
+      "id": "tt21030032",
       "type": "series",
       "name": "Oshi no Ko Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166531-dAL5MsqDHUkj.jpg",
       "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Revenge/Idol/Musical Theater/Seinen/Twins/Male Protagonist/Female Protagonist/Urban\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
     },
     {
-      "id": "tt27305026",
+      "id": "tt12057106",
       "type": "series",
       "name": "Tower of God Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153406-dU2RLKgMUF2U.jpg",
@@ -57,14 +57,14 @@
       "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:School Club/Surreal Comedy/School/Female Protagonist/Urban Fantasy/Cosmic Horror/Monster Girl/Delinquents/Shounen/CGI\n<i>Girl meets elk-girl—and chaos ensues!</i>\n<br><br>\nNo one knows Torako used to be a delinquent. All of her classmates only know her as the perfect student. But everything changes when Nokotan, a transfer student with antlers, enters her life. Antlers aren’t the only thing strange about Nokotan. Her deer nose can sniff out Torako’s secret past! Whether it’s at school or the zoo, chaos follows this doe-eyed girl’s every step. Torako has so many questions! Is Nokotan a deer, a girl, or something in-between?\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt23181418",
+      "id": "tt12331304",
       "type": "series",
       "name": "Our Last Crusade or the Rise of a New World Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx139825-rFlrzdRZmlYK.jpg",
       "description": "Genres: Action, Fantasy, Romance\nTags:War/Magic/Female Protagonist/Male Protagonist/Heterosexual/Witch/Swordplay/Politics\nThe second season of <i>Kimi to Boku no Saigo no Senjou, Aruiwa Sekai ga Hajimaru Seisen</i>.<br><br>\nIska guards Sisbell, sparking Alice's jealousy. Amid a conspiracy, can they thwart personal disputes and war?<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt22001792",
+      "id": "tt1745240",
       "type": "series",
       "name": "Kimi ni Todoke: From Me to You Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168872-GOR7POcJpwKc.jpg",
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "Why Does Nobody Remember Me in This World?",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167419-yesWtncEBD9N.jpg",
-      "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Demons/Post-Apocalyptic\n<i>\"Why does no one remembers the true world...!\"</i><br><br>\nThe era when the great race of the five tribes competing for hegemony on the ground ended with the victory of mankind led by hero Sid. However, that world was suddenly \"overwritten\" in front of a boy Kai. In the rewritten world, Kai saw the scene where humans lost to the five tribal wars because of the absence of hero Sid—here dragons and demons dominate the ground, and Kai is a forgotten existence from all human beings. However, after encountering the mysterious girl Rinne, Kai decides to break this rewritten destiny. In a world without heroes, he inherits the hero's sword and martial art and challenges the mighty enemy races who reign. "
+      "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Demons/Post-Apocalyptic\n<i>\"Why does no one remember the true world...!\"</i><br><br>\nThe era when the great race of the five tribes competing for hegemony on the ground ended with the victory of mankind led by hero Sid. However, that world was suddenly \"overwritten\" in front of a boy Kai. In the rewritten world, Kai saw the scene where humans lost to the five tribal wars because of the absence of hero Sid—here dragons and demons dominate the ground, and Kai is a forgotten existence from all human beings. However, after encountering the mysterious girl Rinne, Kai decides to break this rewritten destiny. In a world without heroes, he inherits the hero's sword and martial art and challenges the mighty enemy races who reign. "
     },
     {
       "id": "tt27187054",
@@ -274,14 +274,14 @@
       "description": "Genres: Fantasy, Mystery, Supernatural\nTags:Vampire/Male Protagonist\nHailing from the prestigious noble house of Delico, Dali Delico is an elite member of the Blood Pact Council with a promising future. When the Blood Pact Council, the highest governing body for the Vamps, assigns a special mission to Dali, he flatly refuses it. Having lost patience, Gerhard, Dino, and Henrique, who are also Council members serving the same term as Dali, rush to the house of Delico to persuade him. What they witness there is Dali, taking care of an infant himself… Meanwhile, there has been a series of mysterious murders targeting Vamps. And Dali seems to have a history with Pendulum, an antisocial organization that's thought to be the mastermind behind these murders… This is the record of the nobless oblige scramble of child-rearing by the noble Vamps. Can they find the right balance of their absolute mission and childcare in this magnificent gothic world?!<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: 'Delico's Nursery' is a completely new work based on Kenichi Suemitsu's 'TRUMP' stage play and serves as a sequel to the 'Grand Guignol' 2017 stage play in the series.</i>"
     },
     {
-      "id": "tt10625492",
+      "id": "tt32332813",
       "type": "series",
       "name": "Twilight Out of Focus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166700-qsl4dBd4pPSQ.jpg",
       "description": "Genres: Drama, Romance\nTags:Boys' Love/School/Male Protagonist/Ensemble Cast/Primarily Male Cast/School Club/Acting/Filmmaking/LGBTQ+ Themes\nFilm enthusiast Mao Tsuchiya and his lone wolf roommate Hisashi Otomo make three promises: <br><br>\n(1) That Mao will never tell anyone that Hisashi is gay and has a boyfriend,<br>\n(2) That Hisashi will never approach Mao \"in that way,\" and<br>\n(3) That they’ll respect each other's \"private time.\"<br><br>\nThe second-years' ground rules should ensure a peaceful life together in their dorm, but reality is never as simple as it seems in the movies, and some things are not so easily promised...\n<br><br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt32421379",
+      "id": "tt22524872",
       "type": "series",
       "name": "SHY Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171748-yigmfmsgq6SR.jpg",
