Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -3,7 +3,7 @@
     {
       "id": "tt32176689",
       "type": "movie",
-      "name": "Boku no Hero Academia THE MOVIE: YOU'RE NEXT",
+      "name": "My Hero Academia: You’re Next",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168013-eeyN5L8tmYKI.png",
       "behaviorHints": {
         "defaultVideoId": "tt32176689"
