--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt23951384"
       },
-      "description": "Genres: Music\nTags:Band/Primarily Teen Cast/Iyashikei/Cute Girls Doing Cute Things/Boarding School/Female Protagonist/Cute Boys Doing Cute Things/Religion/Nun/Coming of Age/School/School Club/Dancing\nTotsuko is a high school student with the ability to see the 'colors' of others. Colors of bliss, excitement, and serenity, plus a color she treasures as her favorite. Kimi, a classmate at her school, gives off the most beautiful color of all. Although she doesn’t play an instrument, Totsuko forms a band with Kimi and Rui, a quiet music enthusiast they meet at a used bookstore in a far corner of town. As they practice at an old church on a remote island, music brings them together, forming friendships and stirring affections. Will they discover their true 'colors'?<br>\n<br>\n(Source: GKIDS)"
+      "description": "Genres: Music\nTags:Band/Primarily Teen Cast/Iyashikei/Cute Girls Doing Cute Things/Boarding School/Female Protagonist/Nun/Cute Boys Doing Cute Things/Religion/Coming of Age/School/Dancing/School Club\nTotsuko is a high school student with the ability to see the 'colors' of others. Colors of bliss, excitement, and serenity, plus a color she treasures as her favorite. Kimi, a classmate at her school, gives off the most beautiful color of all. Although she doesn’t play an instrument, Totsuko forms a band with Kimi and Rui, a quiet music enthusiast they meet at a used bookstore in a far corner of town. As they practice at an old church on a remote island, music brings them together, forming friendships and stirring affections. Will they discover their true 'colors'?<br>\n<br>\n(Source: GKIDS)"
     },
     {
       "id": "tt32574149",
@@ -58,7 +58,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt28036831"
       },
-      "description": "Genres: Supernatural\nTags:\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
+      "description": "Genres: Supernatural\nTags:Rotoscoping\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
     },
     {
       "id": "tt32477753",
@@ -78,7 +78,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt30608459"
       },
-      "description": "Genres: Mahou Shoujo\nTags:Kids/Female Protagonist/Henshin/Video Games/Animals/Magic/Primarily Female Cast\nKomugi, Iroha, Yuki, Mayu, Daifuku and Satoru all got together to play the super popular game \"Dokidoki♡TanuKingdom!\"\n<br>But, as everyone was about to start enjoying the game, a suspicious tanuki somehow dragged them into the world of the game...\n<br>Then there's an even bigger problem! Komugi gets separated from Iroha and all the others...?!\n<br><br>\n\"I <i>aaalways</i> want to stay by Iroha's side-wan!\"\n<br>In order to reunite with her beloved Iroha, Komugi takes on all kinds of games and challenges!\n<br><br>\nWhy in the world did it end up like this...? Just what kind of secret is the game world hiding...?\n<br>The clues are held by the girl who made the game, Natsuki.\n<br><br>\n<i>Hirogaru Sky! Precure </i>and <i>Mahoutsukai Precure!</i> also makes an appearance!\n<br>When everyone's feelings become one, a miracle happens?!\n<br><br>\n(Source: Official website, translated)"
+      "description": "Genres: Mahou Shoujo\nTags:Video Games/Henshin/Female Protagonist/Kids/Animals/Primarily Female Cast/Magic\nKomugi, Iroha, Yuki, Mayu, Daifuku and Satoru all got together to play the super popular game \"Dokidoki♡TanuKingdom!\"\n<br>But, as everyone was about to start enjoying the game, a suspicious tanuki somehow dragged them into the world of the game...\n<br>Then there's an even bigger problem! Komugi gets separated from Iroha and all the others...?!\n<br><br>\n\"I <i>aaalways</i> want to stay by Iroha's side-wan!\"\n<br>In order to reunite with her beloved Iroha, Komugi takes on all kinds of games and challenges!\n<br><br>\nWhy in the world did it end up like this...? Just what kind of secret is the game world hiding...?\n<br>The clues are held by the girl who made the game, Natsuki.\n<br><br>\n<i>Hirogaru Sky! Precure </i>and <i>Mahoutsukai Precure!</i> also makes an appearance!\n<br>When everyone's feelings become one, a miracle happens?!\n<br><br>\n(Source: Official website, translated)"
     },
     {
       "id": "tt31893935",
@@ -88,7 +88,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt31893935"
       },
-      "description": "Genres: Music, Slice of Life\nTags:Idol/VTuber/Primarily Male Cast/Cute Boys Doing Cute Things\nA movie about the VTuber boy band Strawberry Prince."
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Primarily Male Cast/VTuber/Cute Boys Doing Cute Things\nA movie about the VTuber boy band Strawberry Prince."
     },
     {
       "id": "tt30400536",
