Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32176689"
       },
-      "description": "Genres: Action, Adventure, Sci-Fi\nTags:Male Protagonist/Superhero/Super Power/Shounen/Tsundere\nThe fourth installment in the <i>Boku no Hero Academia</i> movie franchise.<br><br>\n"
+      "description": "Genres: Action, Adventure, Sci-Fi\nTags:Male Protagonist/Superhero/Super Power/Shounen/Tsundere\nThe fourth installment in the <i>Boku no Hero Academia</i> movie franchise.<br><br>\n<i>“Next, it's your turn!” </i><br><br>\n\nIn a society where heroes and villains continuously battle in the name of peace and chaos, Deku, a U.A. High School student who aspires to be the best hero he can be, confronts the villain who imitates the hero he's long admired. Can Deku and the rest of U.A. High Class 1-A protect the world by putting an end to Dark Might, the man claiming to be the new Symbol of Peace? \n<br><br>\n\n(Source: TOHO animation)"
     },
     {
       "id": "tt23951384",
@@ -34,7 +34,7 @@
       "id": "tt32561659",
       "type": "movie",
       "name": "Bocchi the Rock! Re:Re:",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171099-yrjMLJnK3l2h.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171099-1tGYBCdYslKI.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt32561659"
       },
