Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -12,7 +12,7 @@
       "type": "series",
       "name": "Alya Sometimes Hides Her Feelings in Russian",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162804-TBeptcAfvqTd.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Language Barrier/Primarily Teen Cast/Male Protagonist/Female Harem/Otaku Culture/Kuudere/Female Protagonist/Primarily Female Cast/Feet\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Language Barrier/Primarily Teen Cast/Male Protagonist/Kuudere/Female Harem/Otaku Culture/Female Protagonist/Primarily Female Cast/Feet/Meta/Nudity\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt12057106",
@@ -145,7 +145,7 @@
       "type": "series",
       "name": "MONOGATARI Series: OFF & MONSTER Season",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173533-0dZ2eV1Y0wQI.jpg",
-      "description": "Genres: Drama, Mystery, Supernatural\nTags:Philosophy/Urban Fantasy/Female Protagonist/Youkai/Primarily Female Cast/Vampire/Drawing/Gods/Hikikomori/Zombie/Fishing\nThe sequel to the 'Final Season' story arc of the <i>Monogatari</i> series.<br><br>\n\n<i>From the past to the future, their story continues. </i><br><br>\n\nNow that he has graduated from high school, Koyomi Araragi’s story ends here. His story is truly over now, but the stories of the girls Koyomi saved - their stories - are not over yet.<br><br>\n\nThis is the prequel or sequel to their stories and their struggles.<br><br>\n\n(Source: Monogatari Series USA Official Website)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
+      "description": "Genres: Drama, Mystery, Supernatural\nTags:Philosophy/Urban Fantasy/Female Protagonist/Youkai/Primarily Female Cast/Vampire/Drawing/Gods/Hikikomori/Zombie/Fishing/Coming of Age\nThe sequel to the 'Final Season' story arc of the <i>Monogatari</i> series.<br><br>\n\n<i>From the past to the future, their story continues. </i><br><br>\n\nNow that he has graduated from high school, Koyomi Araragi’s story ends here. His story is truly over now, but the stories of the girls Koyomi saved - their stories - are not over yet.<br><br>\n\nThis is the prequel or sequel to their stories and their struggles.<br><br>\n\n(Source: Monogatari Series USA Official Website)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
     },
     {
       "id": "tt31844529",
@@ -225,18 +225,18 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Female Protagonist/Heterosexual/Magic/Work/Isekai/Shoujo/Arranged Marriage/Crossdressing\nAfter a workaholic life in Japan, Dahlia is reborn as a magical maven in a new world, but her afterlife takes an unexpected turn. Engaged, betrayed, and orphaned—all before the honeymoon? Talk about a plot twist! Watch as Dahlia turns heartbreak into wand-making brilliance and declares her independence. In this story, the real magic is self-discovery, and Dahlia’s the sorceress of her own destiny.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32332992",
-      "type": "series",
-      "name": "A Nobody's Way Up to an Exploration Hero",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172416-RvQq9bWUxUWt.jpg",
-      "description": "Genres: Action, Fantasy\nTags:Dungeon/Male Protagonist/School/Magic\nKaito Takagi is a low status high schooler. A background mob character, you might say. He is just a low-level explorer who hunts slimes every day in the dungeons that appeared all around Japan, earning pocket money while admiring his childhood friend, the class queen, from afar. One day, a golden slime he had never seen appears before him. After he defeats it, it drops an extremely rare item, worth hundreds of millions, a card that can summon mythical beings!! After he decides to activate the summon, a warrior maiden with unparalleled beauty appears.\n<br><br>\nRise above the mob, Kaito! A modern battle fantasy story has begun!\n<br><br>\n(Source: Hobby Japan, translated)"
-    },
-    {
       "id": "tt32333055",
       "type": "series",
       "name": "Love Is Indivisible by Twins",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167144-tKDxH7M9z1Hb.png",
       "description": "Genres: Romance\nTags:Love Triangle/Twins/Male Protagonist/Heterosexual/Female Protagonist/Tomboy/Primarily Teen Cast\nJun Shirasaki’s love life takes a wild turn when he finds himself caught between the Jinguji twins—his childhood friends who are as different as night and day. Rumi, the older sister, pairs a boyish charm with a maiden’s heart, while Naori combines girlish looks with her deep love for otaku culture. As feelings grow and confusion mounts, Jun must navigate this unexpected love triangle next door.<br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32332992",
+      "type": "series",
+      "name": "A Nobody's Way Up to an Exploration Hero",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172416-RvQq9bWUxUWt.jpg",
+      "description": "Genres: Action, Fantasy\nTags:Dungeon/Male Protagonist/School/Magic\nKaito Takagi is a low status high schooler. A background mob character, you might say. He is just a low-level explorer who hunts slimes every day in the dungeons that appeared all around Japan, earning pocket money while admiring his childhood friend, the class queen, from afar. One day, a golden slime he had never seen appears before him. After he defeats it, it drops an extremely rare item, worth hundreds of millions, a card that can summon mythical beings!! After he decides to activate the summon, a warrior maiden with unparalleled beauty appears.\n<br><br>\nRise above the mob, Kaito! A modern battle fantasy story has begun!\n<br><br>\n(Source: Hobby Japan, translated)"
     },
     {
       "id": "tt32333015",
@@ -316,18 +316,18 @@
       "description": "Genres: Action, Drama\nTags:Superhero/Female Protagonist/Primarily Female Cast/Ninja/LGBTQ+ Themes/Shounen/Natural Disaster/Femboy\nThe second season of <i>SHY</i>.<br><br>\nAs new threats emerge, can our shy heroine step up and save the day once again?<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt31390266",
-      "type": "series",
-      "name": "Tasuketsu -Fate of the Majority-",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174070-mrec0spMuATz.jpg",
-      "description": "Genres: Action, Mystery, Thriller\nTags:Death Game/Male Protagonist/Primarily Teen Cast/Super Power/Survival/Ensemble Cast\nSaneatsu Narita finds himself in a game of survival as half of the human population disappears each night!\n<br><br>\nThe game began suddenly. It was \"Tasuketsu\",  a brutal survival game in which the majority is eliminated. In order to fight back against the immensely powerful emperor masterminding the game, young men and women create their own futures using the mysterious special ability known as \"Special Right.\"<br><br>\n(Source: Crunchyroll, edited)"
-    },
-    {
       "id": "tt30325850",
       "type": "series",
       "name": "Sengoku Youko: The Thousandfold Chaos Arc",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176660-4sDfmx2fOZRJ.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Youkai/Gods/Shounen/Cultivation/Amnesia/Historical/Samurai\nThe second and third cours of <i>Sengoku Youko</i>, adapting the \"Thousandfold Chaos\" arc."
+    },
+    {
+      "id": "tt31390266",
+      "type": "series",
+      "name": "Tasuketsu -Fate of the Majority-",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174070-mrec0spMuATz.jpg",
+      "description": "Genres: Action, Mystery, Thriller\nTags:Death Game/Male Protagonist/Primarily Teen Cast/Super Power/Survival/Ensemble Cast\nSaneatsu Narita finds himself in a game of survival as half of the human population disappears each night!\n<br><br>\nThe game began suddenly. It was \"Tasuketsu\",  a brutal survival game in which the majority is eliminated. In order to fight back against the immensely powerful emperor masterminding the game, young men and women create their own futures using the mysterious special ability known as \"Special Right.\"<br><br>\n(Source: Crunchyroll, edited)"
     },
     {
       "id": "tt32592756",
