--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt23951384"
       },
-      "description": "Genres: Music\nTags:Band/Primarily Teen Cast/Iyashikei/Cute Girls Doing Cute Things/Boarding School/Female Protagonist/Religion/Cute Boys Doing Cute Things/Nun/School/Coming of Age/School Club/Dancing\nTotsuko is a high school student with the ability to see the 'colors' of others. Colors of bliss, excitement, and serenity, plus a color she treasures as her favorite. Kimi, a classmate at her school, gives off the most beautiful color of all. Although she doesn’t play an instrument, Totsuko forms a band with Kimi and Rui, a quiet music enthusiast they meet at a used bookstore in a far corner of town. As they practice at an old church on a remote island, music brings them together, forming friendships and stirring affections. Will they discover their true 'colors'?<br>\n<br>\n(Source: GKIDS)"
+      "description": "Genres: Music\nTags:Band/Cute Girls Doing Cute Things/Primarily Teen Cast/Iyashikei/Boarding School/Female Protagonist/Cute Boys Doing Cute Things/Nun/Religion/Coming of Age/School/School Club/Dancing\nTotsuko is a high school student with the ability to see the 'colors' of others. Colors of bliss, excitement, and serenity, plus a color she treasures as her favorite. Kimi, a classmate at her school, gives off the most beautiful color of all. Although she doesn’t play an instrument, Totsuko forms a band with Kimi and Rui, a quiet music enthusiast they meet at a used bookstore in a far corner of town. As they practice at an old church on a remote island, music brings them together, forming friendships and stirring affections. Will they discover their true 'colors'?<br>\n<br>\n(Source: GKIDS)"
     },
     {
       "id": "tt32574149",
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32574149"
       },
-      "description": "Genres: Fantasy, Horror, Mystery, Psychological, Supernatural\nTags:Male Protagonist/Youkai\nThe first movie in the <i>Mononoke</i> movie trilogy.<br><br>\n\nAsa and Kame strike up an immediate friendship when they arrive at the same time for their first day of duty at the Ooku, the splendid pleasure palace housing the harem of Lord Tenshi. The two young women are there to join the many hundreds of other maidservants—men are barred from entering, with immediate beheading the price of trespassing. It soon becomes clear that behind the luxurious lifestyle and ritualized routines of the Ooku lie sinister schemes and cynical rivalries. Meanwhile, a mysterious wandering potion-peddler known only as the Medicine Seller subtly insinuates himself into the Ooku, just as an uncanny, otherworldly menace begins to reveal itself.\n<br><br>\n(Source: Fantasia Film Festival)"
+      "description": "Genres: Fantasy, Horror, Mystery, Psychological, Supernatural\nTags:Youkai/Male Protagonist/Primarily Female Cast/Historical\nThe first movie in the <i>Mononoke</i> movie trilogy.<br><br>\n\nAsa and Kame strike up an immediate friendship when they arrive at the same time for their first day of duty at the Ooku, the splendid pleasure palace housing the harem of Lord Tenshi. The two young women are there to join the many hundreds of other maidservants—men are barred from entering, with immediate beheading the price of trespassing. It soon becomes clear that behind the luxurious lifestyle and ritualized routines of the Ooku lie sinister schemes and cynical rivalries. Meanwhile, a mysterious wandering potion-peddler known only as the Medicine Seller subtly insinuates himself into the Ooku, just as an uncanny, otherworldly menace begins to reveal itself.\n<br><br>\n(Source: Fantasia Film Festival)"
     },
     {
       "id": "tt32561659",
@@ -68,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt28036831"
       },
-      "description": "Genres: Fantasy, Slice of Life, Supernatural\nTags:Mopeds/Rotoscoping/Female Protagonist/Animals/Ghost/Youkai/Fairy Tale/Gods/Rural/Urban/Urban Fantasy\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
+      "description": "Genres: Fantasy, Slice of Life, Supernatural\nTags:Fairy Tale/Rotoscoping/Female Protagonist/Animals/Ghost/Youkai/Mopeds/Urban Fantasy/Urban/Rural/Gods\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
     },
     {
       "id": "tt32477753",
@@ -98,7 +98,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt31893935"
       },
-      "description": "Genres: Music, Slice of Life\nTags:Idol/VTuber/Primarily Male Cast/Cute Boys Doing Cute Things\nA movie about the VTuber boy band Strawberry Prince."
+      "description": "Genres: Music, Slice of Life\nTags:Primarily Male Cast/VTuber/Idol/Cute Boys Doing Cute Things\nA movie about the VTuber boy band Strawberry Prince."
     },
     {
       "id": "tt30400536",
@@ -108,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt30400536"
       },
-      "description": "Genres: Comedy, Ecchi, Slice of Life\nTags:Kids/Dinosaurs\nThe 32nd <i>Crayon Shin-chan</i> film. The movie will follow the friendship between the Nobara family's pet dog Shiro and a \"small dinosaur.\" Their connection helps the growth of Shinnosuke and the Kusakabe Defense Squad. <br><br>\n\n(Source: Anime News Network, edited)"
+      "description": "Genres: Comedy, Ecchi, Slice of Life\nTags:Dinosaurs/Kids\nThe 32nd <i>Crayon Shin-chan</i> film. The movie will follow the friendship between the Nobara family's pet dog Shiro and a \"small dinosaur.\" Their connection helps the growth of Shinnosuke and the Kusakabe Defense Squad. <br><br>\n\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt32904005",
@@ -118,7 +118,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32904005"
       },
-      "description": "Genres: Music, Sports\nTags:Idol/CGI/Primarily Male Cast/Ice Skating\nNew KING OF PRISM film reconstructing the events of the Prism Show competition, the PRISM.1, shown during KING OF PRISM -Shiny Seven Stars- with added scenes."
+      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/Primarily Male Cast/CGI\nNew KING OF PRISM film reconstructing the events of the Prism Show competition, the PRISM.1, shown during KING OF PRISM -Shiny Seven Stars- with added scenes."
     }
   ]
 }
